feat: improvement and update new schema
